# Open-Source

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  conan_toolchain.cmake  module-GTest-release-x86_64-data.cmake
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: pull-request.md
components/: CMakeLists.txt
components/HelloWorld/: CMakeLists.txt
docs/: COMPONENT_SPEC.md
scripts/: check-formatting.ps1  format-code.cmd
tests/: CMakeLists.txt  my_tests.cpp
tests/HelloWorldTests/: CMakeLists.txt
